# exvllm

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  install.sh  main.cpp  make_whl.sh  simply.py
docs/: version.md
python/: setup.py
python/exvllm/: __init__.py  cli.py  ft_kernel.py  register.py
python/exvllm/vllm/: fused_moe_layers.py  model_loader_utils.py
src/: alivethreadpool.cpp  alivethreadpool.h  fastllm.cpp  fastllm.h  ft_bindings.cpp  ft_kernel.cpp  ft_kernel.h  moe.cpp  moe.h
src/baseop/: baseop.cpp
src/x86/: avx2.cpp  avx512bf16.cpp  avx512f.cpp
